--- a/Desarrollo/Joseph Ajcan/Software Industrial/Software Industrial/Properties/Resources.resx
+++ b/Desarrollo/Joseph Ajcan/Software Industrial/Software Industrial/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="monedas-en-efectivo-en-moneda-icono-4023-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\PNG\monedas-en-efectivo-en-moneda-icono-4023-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="laboratory-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\PNG\laboratory-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="actualizacion-de-copia-de-seguridad-icono-4945-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\PNG\actualizacion-de-copia-de-seguridad-icono-4945-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,7 +160,7 @@
   <data name="cesta-de-la-compra-de-la-tienda-icono-8752-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\PNG\cesta-de-la-compra-de-la-tienda-icono-8752-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="laboratory-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\laboratory-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Search-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\PNG\Search-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
