--- a/Desarrollo/Walter Quijada/Software Industrial/Software Industrial/Properties/Resources.resx
+++ b/Desarrollo/Walter Quijada/Software Industrial/Software Industrial/Properties/Resources.resx
@@ -118,40 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Wallpapper  - Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\JPG\Wallpapper  - Blue.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="aceptar_icono_6494_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\aceptar-icono-6494-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="actualizacion_de_copia_de_seguridad_icono_4945_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\actualizacion-de-copia-de-seguridad-icono-4945-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ayuda_a_un_punto_de_consulta_de_icono_8877_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\ayuda-a-un-punto-de-consulta-de-icono-8877-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cancelar_icono_4839_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\cancelar-icono-4839-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cesta_de_la_compra_de_la_tienda_icono_8752_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\cesta-de-la-compra-de-la-tienda-icono-8752-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="la_lucha_contra_la_caja_registradora_icono_4028_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\la-lucha-contra-la-caja-registradora-icono-4028-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\JPG\Logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\recursos\jpg\logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ayuda-a-un-punto-de-consulta-de-icono-8877-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\ayuda-a-un-punto-de-consulta-de-icono-8877-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="monedas_en_efectivo_en_moneda_icono_4023_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\monedas-en-efectivo-en-moneda-icono-4023-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="aceptar-icono-6494-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\aceptar-icono-6494-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="paquete_de_caja_icono_4765_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\paquete-de-caja-icono-4765-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cancelar-icono-4839-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\cancelar-icono-4839-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="usuarios_de_la_persona_icono_7851_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\usuarios-de-la-persona-icono-7851-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="actualizacion-de-copia-de-seguridad-icono-4945-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\actualizacion-de-copia-de-seguridad-icono-4945-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="usuario_de_los_recursos_de_mayordomo_icono_7232_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\png\usuario-de-los-recursos-de-mayordomo-icono-7232-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cesta-de-la-compra-de-la-tienda-icono-8752-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\cesta-de-la-compra-de-la-tienda-icono-8752-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="la-lucha-contra-la-caja-registradora-icono-4028-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\la-lucha-contra-la-caja-registradora-icono-4028-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="monedas-en-efectivo-en-moneda-icono-4023-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\monedas-en-efectivo-en-moneda-icono-4023-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="paquete-de-caja-icono-4765-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\paquete-de-caja-icono-4765-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="usuario-de-los-recursos-de-mayordomo-icono-7232-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\usuario-de-los-recursos-de-mayordomo-icono-7232-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="usuarios-de-la-persona-icono-7851-128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\PNG\usuarios-de-la-persona-icono-7851-128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Wallpapper____Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\recursos\jpg\wallpapper  - blue.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
